bk_ida/gccida/g1/assign_386_stack_local
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_386_stack_local/src/i386.c:10307:30: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  assign_386_stack_local( machine_mode mode, int n) 
                             ^
                             enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_386_stack_local/src/i386.c:10312:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 9850, "assign_386_stack_local"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_386_stack_local/src/obj/i386.o] Error 1
